; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/32x/extr_32x.c_PicoUnload32x.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/32x/extr_32x.c_PicoUnload32x.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Pico32xMem = common dso_local global i32* null, align 8
@msh2 = common dso_local global i32 0, align 4
@ssh2 = common dso_local global i32 0, align 4
@PAHW_32X = common dso_local global i32 0, align 4
@PicoAHW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PicoUnload32x() #0 {
  %1 = load i32*, i32** @Pico32xMem, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32*, i32** @Pico32xMem, align 8
  %5 = call i32 @plat_munmap(i32* %4, i32 4)
  br label %6

6:                                                ; preds = %3, %0
  store i32* null, i32** @Pico32xMem, align 8
  %7 = call i32 @sh2_finish(i32* @msh2)
  %8 = call i32 @sh2_finish(i32* @ssh2)
  %9 = load i32, i32* @PAHW_32X, align 4
  %10 = xor i32 %9, -1
  %11 = load i32, i32* @PicoAHW, align 4
  %12 = and i32 %11, %10
  store i32 %12, i32* @PicoAHW, align 4
  ret void
}

declare dso_local i32 @plat_munmap(i32*, i32) #1

declare dso_local i32 @sh2_finish(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
